--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/Estilos.scss"> 
     <title>The Ramones</title>
     <link rel="icon" type="image/x-icon" href="./images/9.jpg">
   </head>
@@ -40,7 +40,9 @@
       </nav>
 </header>
 
+
 <!-- ************************************************ -->
+<div class="container">
   <div class="Ramones"> <h1><strong>The Ramones</strong></h1></div>
     <article>
       <p class="intro"> 
