--- a/pages/Contactos.html
+++ b/pages/Contactos.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<link rel="stylesheet" href="../scss/Estilos.scss" /> 
+<link rel="stylesheet" href="../css/style.css" /> 
 <title>Contactate con nosotros</title>
 <link rel="icon" type="image/x-icon" href="../images/3.png">
 
