--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       </nav>
 </header>
   
+<div class="container-fluid mt-3">
+<div class="row">
+  <div class="col-sm-6 bg-text-white p-3">
 <div class="Ramones"> 
   <p><h2><strong>The Ramones</strong></h2></p>
   <article> 
@@ -68,7 +71,7 @@
     </article>
 </div>
   </div>
-
+ <div class="col-sm-6 bg-text-white p-3">
 <article class="noticias ramoneras">
       <h3>Noticias Ramoneras</h3>
         <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
@@ -86,7 +89,9 @@
   </div>
   </div>
 </div>
-
+</div>
+<
+</div>
 
 <div class="carousel-inner">
   <div class="carousel-item active img-fluid" data-bs-interval="6000 " >
